jstests/core/insert_id_undefined.js
@@ -3,7 +3,5 @@ t = db.insert_id_undefined;
 t.drop();
 t.insert({_id:undefined});
 assert.eq(t.count(), 0);
-
-//TODO: b/c of SERVER-12993 - remove below line once the bug which 
-//causes the server to create the collection is fixed
-t.drop()
+// Make sure the collection was not created
+assert.commandFailed( t.stats() );
